--- a/Vouched/res/values/strings.xml
+++ b/Vouched/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="drawer_open">Slider Menu Opened</string>
     <string name="drawer_close">Slider Menu Closed</string>
+    <string name="invite_message">I just used the Vouched app to recommend you for your best professional traits.\n
+Are you a leader? An innovator? A great communicator? Download the app to find out.\n\niTunes: LINK
+\nGoogle Play: LINK\nwww.vouchedapp.com\n\nThanks,</string>
 
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
